--- a/projects/alpha/1.1
+++ b/projects/alpha/1.1
@@ -30,3 +30,6 @@ prepend-path PATH /data/tools/lt/pd_tools/bin
 # Quality of Life Cadence Updates
 setenv W3264_NOWARN_UNSUPPORTED_CENTOS 1
 setenv CDS_AUTO_64BIT ALL
+
+# Calibre Setup
+setenv ISIPP_DRC_INCLUDE_DIR /data/proj/alpha_mosaic/Foundry/IMEC/drc
