--- a/projects/alpha/1.1
+++ b/projects/alpha/1.1
@@ -32,4 +32,6 @@ setenv W3264_NOWARN_UNSUPPORTED_CENTOS 1
 setenv CDS_AUTO_64BIT ALL
 
 # Calibre Setup
-setenv ISIPP_DRC_INCLUDE_DIR /data/proj/alpha_mosaic/Foundry/IMEC/drc
+# setenv ISIPP_DRC_INCLUDE_DIR /data/proj/alpha_mosaic/Foundry/IMEC/drc
+
+setenv ISIPP_DRC_INCLUDE_DIR /data/tools/lt/pd_techdata/imec130/sp/runset/
